--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -11,8 +11,12 @@ $sectionBackground: #f2f2f2;
 $itemHover: #f5f5f5;
 .main-container{
     margin: auto;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
     max-width: 1140px;
 @media screen and (max-width:1200px) {
     max-width: 960px;
@@ -26,6 +30,7 @@ $itemHover: #f5f5f5;
     background: url('http://i.artfile.ru/1920x1080_938245_[www.ArtFile.ru].jpg') top center/cover;
     background-attachment: fixed;
 .bg-overlay{
+    background: -webkit-gradient( linear, left top, left bottom, from(rgba( 255, 255, 255, 0 )), to(rgba(39,32,32,0.69)) );
     background: linear-gradient( to bottom, rgba( 255, 255, 255, 0 ) 0%, rgba(39,32,32,0.69) 100% );
     position: absolute;
     display: block;
@@ -50,10 +55,16 @@ $itemHover: #f5f5f5;
 }
 }
 .header-title{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: auto;
-    justify-content: center;
-    align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     padding: 1rem 0 0 0;
     max-width: 960px;
 .title{
@@ -63,7 +74,9 @@ $itemHover: #f5f5f5;
     font-weight: 800;
 }
 .line{
-    flex: 1 1 auto;
+    -webkit-box-flex: 1;
+        -ms-flex: 1 1 auto;
+            flex: 1 1 auto;
     position: relative;
 &:before, &:after{
                content: '';
@@ -92,8 +105,10 @@ $itemHover: #f5f5f5;
     line-height: 46px;
     letter-spacing: 0px;
     margin: 0 10px 0 0;
+    -webkit-transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
     transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 .month{
+    -webkit-transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
     transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
     color: #000;
     text-transform: uppercase;
@@ -104,6 +119,7 @@ $itemHover: #f5f5f5;
 }
 .days{
     width: 80px;
+    -webkit-transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
     transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
 }
 &:hover{
@@ -114,23 +130,35 @@ $itemHover: #f5f5f5;
 }
 }
 .title-container{
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 svg{
-    transform: rotate(5deg);
+    -webkit-transform: rotate(5deg);
+            transform: rotate(5deg);
 }
 }
 .share-box{
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     margin-top: 50px;
     padding: 0 15px;
     max-width: 180px;
     width: 25%;
 &.attachment{
      position: static;
-     justify-content: flex-end;
+     -webkit-box-pack: end;
+         -ms-flex-pack: end;
+             justify-content: flex-end;
      margin: 0 0 35px 0;
  }
 .social-links{
@@ -184,11 +212,14 @@ a{
     padding: 12px 0;
     overflow: hidden;
     font-size: 15px;
-    box-shadow: inset 0 0 0 1px #c1c1c1;
+    -webkit-box-shadow: inset 0 0 0 1px #c1c1c1;
+            box-shadow: inset 0 0 0 1px #c1c1c1;
     position: relative;
+    -webkit-transition: all 0.3s ease 0ms;
     transition: all 0.3s ease 0ms;
 &:before{
-     box-shadow: inset 0 0 0 1px #4267b2;
+     -webkit-box-shadow: inset 0 0 0 1px #4267b2;
+             box-shadow: inset 0 0 0 1px #4267b2;
      content: '';
      position: absolute;
      display: block;
@@ -197,13 +228,16 @@ a{
      width: 100%;
      height: 100%;
      z-index: -1;
-     transform: translateY( 100% );
+     -webkit-transform: translateY( 100% );
+             transform: translateY( 100% );
+     -webkit-transition: all 0.3s ease 0ms;
      transition: all 0.3s ease 0ms;
  }
 &:hover{
      color: #fff;
 &:before{
-     transform: translateY( 0 );
+     -webkit-transform: translateY( 0 );
+             transform: translateY( 0 );
  }
 }
 }
@@ -284,6 +318,7 @@ h2{
   font-weight: 800;
   color: #ffffff;
   text-align: right;
+  -webkit-transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
   transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
   &:hover{
     color: #06d6a0;
@@ -295,6 +330,7 @@ h2{
     color: #cacaca;
     margin-top: -25px;
     font-size: 14px;
+    -webkit-transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
     transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
     &:hover{
       color: #06d6a0;
