--- a/js/views/blog.html
+++ b/js/views/blog.html
@@ -1,5 +1,5 @@
 <div class="section-content">
-    <div class="post-container">
+    <div class="post-container" layout="row" layout-align="center center">
         <div class="recent-post-container" ng-repeat="blogPost in blog track by $index">
             <div class="img-container">
                 <!--<img src="http://premiumwpblogthemes.com/wp/waverly/wp-content/uploads/sites/6/2017/09/paul-3-500x667.jpg">-->
