--- a/js/views/blog.html
+++ b/js/views/blog.html
@@ -25,9 +25,9 @@
                     ng-class="{ 'disabled': newCurrent < 2 }">&lsaquo;</li>
                 <li ng-repeat="link in links() track by $index"
                     class="paginator__link"
-                    ng-class="{ 'current': localCurrent() === links() }"
+                    ng-class="{ 'current': currentPage === link }"
                     ng-click="changeCurrent(link)"
-                    >{{ link }}</li>
+                    >{{ link  }}</li>
                 <li
                     ng-click="dicrementCurrent()"
                     ng-class="{ disabled: newCurrent === paginationPageLength() }"
