--- a/scss/_blog.scss
+++ b/scss/_blog.scss
@@ -375,3 +375,489 @@ h2{
     &:hover{color: #000;}
   }
 }
+.blog{
+  &__wrap{
+    list-style: none;
+    text-align: left;
+    li{
+      margin: 0 0 30px;
+    }
+    h5{
+      margin: 0 0 10px;
+    }
+  }
+}
+.title-slide{
+  a{
+    color: #262626;
+  }
+}
+.category-container{
+  &:before{
+    background: #8c8c8c !important;
+  }
+  a{
+    color: #06d6a0;
+    &:hover{
+      color: #8c8c8c !important;
+    }
+  }
+}
+.section-content{
+  max-width: 1140px;
+  margin: auto;
+  display: flex;
+  flex-direction: column;
+  @media screen and (max-width:1200px) {
+    max-width: 960px;
+  }
+  padding: 2rem 0;
+}
+.recent-post-container{
+  margin: auto;
+  display: flex;
+  margin: 0 2rem 0 0;
+  .post-category-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .category-container{
+    display: flex;
+    flex-direction: column;
+    text-align: right;
+    padding: 0;
+  }
+  .img-container{
+    img{
+      width: 259px;
+    }
+  }
+  .date{
+    position: relative;
+    padding-left: 58px;
+    margin-top: 8px;
+    height: fit-content;
+    &:hover{
+      color: #06d6a0;
+    }
+    h3{
+      text-transform: uppercase;
+      margin: -5px -4px 0 0;
+      font-size: 18px;
+      letter-spacing: 4px;
+      font-weight: 800;
+    }
+  }
+  .title{
+    text-align: left;
+    padding: 0 0 0 .6rem;
+    transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+    margin: 0 0 .4rem 0;
+    line-height: 35px;
+    color: #262626;
+    &:hover{
+      color: #06d6a0;
+    }
+  }
+  .content-large{
+    padding: 0 0 0 3.6rem;
+    text-align: left;
+  }
+  .read-more-container{
+    display: flex;
+    width: 100%;
+    justify-content: flex-end;
+    position: relative;
+    margin-top: 5px;
+    font-weight: 800;
+    text-transform: uppercase;
+    letter-spacing: 3px;
+    font-size: 11px;
+    a{
+      color: #262626;
+      &:hover{
+        color: #06d6a0;
+      }
+    }
+  }
+}
+.lineTitle{
+  display: flex;
+  align-items: center;
+  margin-bottom: 1.5rem;
+  &.is-white>.line:before{background: $color0;}
+  &>*:not(.line){
+    margin: 0 !important;
+    padding: 0 !important;
+    line-height: 1.3 !important;
+  }
+  .line{
+    flex: 1 1 auto;
+    position: relative;
+    &:before, &:after{
+      content: '';
+      position: absolute;
+      top: 0;
+      height: 2px;
+    }
+    &:before{
+      width: calc(100% - 1rem);
+      background: $borderColor;
+    }
+    &:after{
+      width: 40px;
+      background: $turquoiseColor;
+    }
+    &:first-child{
+      &:before, &:after{right: 1rem;}
+    }
+    &:last-child{
+      &:before, &:after{left: 1rem;}
+    }
+  }
+}
+.title{
+  font-weight: 300;
+  &.is-2{
+    padding-top: 50px;
+  }
+}
+.blogItems{
+  flex-direction: column;
+}
+.breadcrumb{
+  background-color: transparent;
+}
+.fa-icon {
+  width: auto;
+  max-width: 100%;
+  max-height: 100%;
+  vertical-align: middle;
+}
+.has-text-design{
+  color: $turquoiseColor;
+}
+a.has-text-design{
+  color: $turquoiseColor;
+  &:hover{
+    color: $darkColor;
+  }
+}
+.select select{
+  width: 220px;
+}
+input{
+  width: 100%;
+}
+.deliveryForm{
+  .lineInput{
+    z-index: 1;
+  }
+}
+.lineInput{
+  position: relative;
+  display: block;
+  border-bottom: 1px solid $darkColor;
+  padding: 1rem 0 0 0;
+  text-align: left;
+  &:hover{
+    z-index:10;
+  }
+  &.labelUp{
+    .lineInput-label{
+      bottom: 34px;
+    }
+  }
+  &.inputFocus{
+    .lineInput-list{
+      transition: all 0.3s 0s cubic-bezier( 0.19, 1, 0.22, 1 );
+      transform: scaleY(1);
+      opacity: 1;
+    }
+    .lineInput-label{
+      bottom: 34px;
+    }
+  }
+  label{
+    position: relative;
+    display: block;
+    input{padding-right: 40px !important;}
+    &:after {
+      border: 1px solid $darkColor;
+      border-right: 0;
+      border-top: 0;
+      content: " ";
+      display: block;
+      height: 0.5em;
+      pointer-events: none;
+      position: absolute;
+      -webkit-transform: rotate(-45deg);
+      transform: rotate(-45deg);
+      width: 0.5em;
+      margin-top: -0.375em;
+      right: 0.7em;
+      top: calc(50% + 3px);
+    }
+  }
+  &-label{
+    position: absolute;
+    left: 0;
+    bottom: 4px;
+    font-weight: 800;
+    letter-spacing: 2px;
+    font-size: 0.7rem;
+    line-height: 1rem;
+    text-transform: uppercase;
+    color: $darkColor;
+    text-align: left;
+    transition: bottom 0.7s cubic-bezier( 0.19, 1, 0.22, 1 );
+  }
+  input{
+    position: relative;
+    display: block;
+    width: 100%;
+    border: none;
+    outline: none;
+    font-weight: 400;
+    font-size: 0.9rem;
+    color: $darkColor;
+    background: none;
+    box-shadow: none;
+    &:focus, &.is-focused, &:active, &.is-active{
+      border-color: transparent;
+      box-shadow: none;
+    }
+  }
+  &-list{
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.1);
+    background: $color0;
+    margin: 1px 0 0 0;
+    font-size: 0.9rem;
+    transition: all 0.3s 0.1s cubic-bezier( 0.19, 1, 0.22, 1 );
+    transform-origin: 50% 0;
+    opacity: 0;
+    transform: scaleY(0);
+    li{
+      padding: 2px 8px;
+      cursor: pointer;
+      &:hover{
+        background: $itemHover;
+      }
+    }
+  }
+}
+.columns{
+  margin:0 !important;
+}
+button.is-success {
+  margin: 1rem 0 0 0;
+}
+.button-design{
+  border-radius: 20px;
+  background: $turquoiseColor;
+  border: none;
+  color: $color0;
+  padding: 0 30px;
+  font-size: 0.9rem;
+  transition: all 0.3s ease 0ms;
+  &:hover, &:focus, &:focus:not(:active), &.is-focused:not(:active){
+    outline: 0;
+    background: $darkColor;
+    box-shadow: 0 8px 6px -6px #000;
+    color: $color0;
+  }
+}
+.languages{
+  width: 50px;
+  a.dropdown-item.is-active, .dropdown .dropdown-menu .has-link a.is-active {
+    background-color: #00d1b2;
+  }
+  .dropdown{
+    &-menu, &-trigger, .button{
+      min-width: 100%;
+      width: 100%;
+    }
+    &-item{
+      padding: 0.375rem 0.5rem;
+    }
+  }
+}
+.select{
+  width:100%;
+}
+.select select {
+  width: 100%;
+}
+.blogItems {
+  display: flex;
+  flex-wrap: wrap;
+}
+.level-right {
+  margin: .5rem 0;
+}
+.description{
+  max-width: 240px;
+  margin: auto;
+  font-size: 15px;
+}
+.product{
+  width: 100%;
+  margin: 1.4rem auto;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  align-self: flex-start;
+  .button.is-warning{
+    position: absolute;
+    top:10px;
+    right: 5px;
+  }
+  .button.is-info {
+    position: absolute;
+    top:10px;
+    right: 45px;
+  }
+}
+.date{
+  text-transform: uppercase;
+  font-size: 18px;
+  letter-spacing: 4px;
+  font-weight: 800;
+  color: #ffffff;
+  text-align: left;
+  transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+  &:hover{
+    color: #06d6a0;
+  }
+  p{
+    letter-spacing: 1px;
+  }
+  .days{
+    color: #cacaca;
+    margin-top: -25px;
+    font-size: 14px;
+    transition: all .2s cubic-bezier(1.0, 0.5, 0.8, 1.0);
+    &:hover{
+      color: #06d6a0;
+    }
+  }
+}
+.category-container{
+  border-top: 2px solid #06d6a0;
+  display: inline-block;
+  width: initial;
+  padding-left: 25px;
+  position: relative;
+  &:hover{
+    span{
+      color: #8c8c8c;
+    }
+  }
+  span{
+    color: #06d6a0;
+    padding: 0 10px 0 0;
+  }
+  &:hover{
+    &:before{
+      transform: scaleX( 1 );
+      transform-origin: left;
+    }
+  }
+  &:before{
+    content: '';
+    background: #ffffff;
+    position: absolute;
+    top: -2px;
+    left: 0;
+    width: 100%;
+    height: 2px;
+    -webkit-backface-visibility: hidden;
+    transform: scaleX( 0 );
+    transform-origin: right;
+    transition: transform 0.7s cubic-bezier( 0.19, 1, 0.22, 1 );
+  }
+  a{
+    &:hover{
+      color: #fff !important;
+    }
+  }
+}
+.title-slide{
+  display: flex;
+  flex-direction: row-reverse;
+  a{
+    color: #ffffff;
+    font-size: 32px;
+    line-height: 46px;
+    letter-spacing: 0px;
+    margin: 0 10px 0 0;
+    &:hover{
+      color: #06d6a0;
+      p{
+        color: #06d6a0;
+      }
+    }
+  }
+  h3{
+    font-weight: 800;
+  }
+}
+.component-fade-enter-active, .component-fade-leave-active {
+  transition: opacity .3s ease;
+}
+.component-fade-enter, .component-fade-leave-to {
+  opacity: 0;
+}
+.product-label{
+  position: absolute;
+  display: inline-flex;
+  flex-direction: column;
+  right: 8px;
+  top: 8px;
+  width: auto;
+  height: auto;
+  z-index: 2;
+  transition: all 0.3s ease-out 0s;
+  a{
+    padding: 1px 10px 0 14px;
+    margin: 0 0 .5rem 0;
+    background: #06d6a0;
+    border-radius: 17px;
+    color: #fff;
+    text-transform: uppercase;
+    font-size: 9px;
+    letter-spacing: 2px;
+    line-height: 20px;
+    transition: all 0.3s ease-out 0s;
+    &:hover{
+      background: #262626;
+    }
+  }
+
+}
+.post-container{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  .recent-post-container{
+    width: 48%;
+    margin: 4.2px 4.2px 10px 4.2px;
+    flex-direction: column;
+    .img-container{
+      margin: auto auto auto 0;
+      padding: 0 0 0 3.6rem;
+      img{
+        width:100%;
+        height: 255px;
+      }
+    }
+  }
+}
