--- a/js/views/blogViews/blog.html
+++ b/js/views/blogViews/blog.html
@@ -15,7 +15,7 @@
                     </div>
                     <p class="content-large">{{ blogPost.description }}</p>
                     <div class="read-more-container">
-                        <a href="#/post/{{blogPost.id}}" class="post-read-more-button">Read More</a>
+                        <a href="/post/{{blogPost.id}}" class="post-read-more-button">Read More</a>
                     </div>
                 </div>
             </div>
