--- a/js/views/blogViews/blog.html
+++ b/js/views/blogViews/blog.html
@@ -4,7 +4,7 @@
             <div class="img-container">
                 <a href="#" class="category-container">
                     <span>Lorem</span>
-                    <img src="http://premiumwpblogthemes.com/wp/waverly/wp-content/uploads/sites/6/2017/09/paul-3-500x667.jpg">
+                    <img src="http://anywalls.com/pic/201210/2560x1600/anywalls.com-20575.jpg">
                 </a>
             </div>
             <div class="post-body">
